--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,25 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Counter</h1>
+<div>
+  <div class="loc-counter">
+    <button (click)="addedCount()" class="loc-counter__btn added">
+      +
+    </button>
+
+    <input
+      type="text"
+      name="Quantity"
+      min="0"
+      max="99"
+      maxlength="2"
+      [(ngModel)]="text"
+      (ngModelChange)="onAmountChange($event)"
+      (keypress)="numberOnly($event)"
+      class="loc-counter__input"
+    />
+
+    <button class="loc-counter__btn remove" (click)="minusCount()">
+      -
+    </button>
+
+  </div>
+</div>
